[tool.poetry]
name = "onepasswordconnectsdk"
version = "1.5.0"
description = "Python SDK for 1Password Connect"
license = "MIT"
authors = ["1Password"]
readme = "README.md"
repository = "https://github.com/1Password/connect-sdk-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/1Password/connect-sdk-python/issues"
"Report Security Issue" = "https://bugcrowd.com/agilebits"

[tool.poetry.dependencies]
python = "^3.11"
python-dateutil = "^2.8.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
respx = "^0.20.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
